# order-stream

./: .env  .gitignore  CLAUDE.md  Cargo.toml  Cargo.toml.prod  README.md  auth.md  input.css  phase_0.md  phase_1.md  report.md  rust-toolchain.toml
end2end/: .gitignore  package-lock.json  playwright.config.ts
src/: app.rs  lib.rs  main.rs
src/app/: mod.rs
src/app/components/: mod.rs  navbar.rs  role_gated.rs  route_guard.rs  state_provider.rs  station_view.rs  stations.rs  ws_bridge.rs
src/app/components/admin/: categories.rs  create_category.rs  create_event.rs  create_product.rs  create_station.rs  events.rs  mod.rs  products.rs  stations.rs  users.rs
src/app/components/atoms/: connection_indicator.rs  icons.rs  logout_button.rs  mod.rs  user_dropdown.rs
src/app/components/cashier/: mod.rs  order.rs  order_info.rs  products.rs
src/app/pages/: admin.rs  cashier.rs  home.rs  mod.rs  signin.rs  signup.rs  station.rs  stations.rs
src/app/states/: category.rs  event.rs  mod.rs  order.rs  product.rs  settings.rs  station.rs  user.rs  websocket.rs
src/backend/: auth.rs  category.rs  config.rs  db.rs  error.rs  errors.rs  event.rs  item.rs  mod.rs  order.rs  product.rs  settings.rs  station.rs  user.rs  websocket.rs
src/backend/api/: categories.rs  items.rs  mod.rs  order_items.rs  orders.rs
src/backend/database/: categories.rs  items.rs  mod.rs  order_items.rs  orders.rs  stations.rs  users.rs  validators.rs
src/backend/database/dao/: category.rs  item.rs  mod.rs  order.rs  order_item.rs
src/backend/database/model/: category.rs  item.rs  mod.rs  order.rs  order_item.rs
src/backend/database/service/: connection.rs  item.rs  mod.rs
src/backend/db/: category.rs  event.rs  item.rs  mod.rs  order.rs  product.rs  station.rs  user.rs
src/backend/service/: category.rs  item.rs  items.rs  mod.rs  order.rs  order_items.rs  orders.rs  product.rs  station.rs  stations.rs
src/backend/services/: auth.rs  categories.rs  items.rs  mod.rs  order_items.rs  orders.rs  stations.rs  utils.rs
src/common/: errors.rs  german_names.rs  mod.rs  requests.rs  resource_name.rs  resource_type.rs  types.rs
src/deprecated/components/: cart_display.rs  cashier_header.rs  category_grid.rs  category_list.rs  category_section.rs  filtered_order_card.rs  item_form.rs  item_list.rs  item_selector.rs  mod.rs  order_creation_panel.rs  order_list.rs  order_section.rs  recent_orders_panel.rs  route_guard.rs  station_filters.rs  station_list.rs  theme_toggle.rs
src/deprecated/design_system/atoms/: card.rs  select.rs  spinner.rs  text.rs
src/deprecated/design_system/molecules/: form_field.rs  theme_switcher.rs
src/deprecated/design_system/organisms/: navbar.rs
src/deprecated/design_system/theme/: variants.rs
src/deprecated/design_system/theme/tokens/: color.rs  mod.rs
src/deprecated/pages/: admin_old.rs  design_system.rs  login.rs  mod.rs
src/deprecated/state/: admin.rs
src/frontend/: mod.rs
src/frontend/components/: cart_sidebar.rs  cashier_header.rs  category_form.rs  category_grid.rs  category_list.rs  category_pane.rs  category_section.rs  filtered_order_card.rs  item_form.rs  item_list.rs  item_section.rs  item_selector.rs  loading.rs  mod.rs  order_card.rs  order_item_row.rs  order_list.rs  order_section.rs  station_filters.rs  station_form.rs  station_list.rs  station_section.rs  station_view.rs  tab_nav.rs  theme_toggle.rs
src/frontend/design_system/: mod.rs
src/frontend/design_system/atoms/: alert.rs  button.rs  icon.rs  input.rs  mod.rs  spinner.rs  text.rs
src/frontend/design_system/molecules/: mod.rs  theme_switcher.rs
src/frontend/design_system/organisms/: mod.rs  navbar.rs
src/frontend/design_system/theme/: mod.rs  presets.rs  tokens.rs  variants.rs
src/frontend/design_system/theme/tokens/: border.rs  overrides.rs  shadow.rs  spacing.rs  typography.rs
src/frontend/pages/: admin.rs  cashier.rs  cashier_old.rs  design_system.rs  home.rs  login.rs  mod.rs  station.rs
src/frontend/state/: admin.rs  auth.rs  mod.rs  theme.rs
